WanaLyzer/out/numpy/typing/tests/data/pass/ufunc_config.pyi
def func1(a: str, b: int) -> None: ...
def func2(a: str, b: int, c: float = 1.0) -> None: ...
def func3(a: str, b: int) -> int: ...

class Write1:
    def write(self, a: str) -> None: ...

class Write2:
    def write(self, a: str, b: int = 1) -> None: ...

class Write3:
    def write(self, a: str) -> int: ...
